# vigil-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_exe.bat  pyproject.toml  requirements.txt  vigil.bat  vigil.spec
.github/workflows/: ci.yml
src/vigil/: TacticalCyberpunk.tcss  __init__.py  __main__.py  app.py  config.py  config_manager.py  session.py  theme.tcss
src/vigil/collectors/: __init__.py  base.py  cpu.py  gpu.py  netdisk.py  ram.py  system.py
src/vigil/widgets/: boot_screen.py  braille_chart.py  clock_chart.py  cpu_panel.py  financial_widget.py  gpu_panel.py  help_overlay.py  netdisk_widget.py  power_header.py  process_table.py  setup_wizard.py  status_bar.py
