[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil"
version = "1.0.0"
description = "Real-time terminal power monitor — CPU, GPU, RAM wattage dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["power", "monitor", "tui", "terminal", "cpu", "gpu", "wattage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "psutil>=5.9.8",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
windows = [
    "wmi>=1.5.1",
    "pywin32>=306",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/vigil"
"Bug Tracker" = "https://github.com/yourusername/vigil/issues"

[project.scripts]
vigil = "vigil.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
